--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-md-6 mt-3">
                       <div class="infoBody">
                         <p class="title01">Surxondaryo viloyati hokimligida jismoniy va yuridik shaxslarning qabul qilish grafigi</p>
-                        <h2 class="userName">Ражабов Шерзод Абдимуратович</h2>
+                        <h2 class="userName">Rajabov Sherzod Abdimuratovich</h2>
                         <p class="title01 second">Surxondaryo viloyat hokimining moliya-iqtisodiyot va kambag‘allikni qisqartirish masalalari bo‘yicha birinchi o‘rinbosari</p>
                         <div class="qabul">
                           <div class="kun"><i>Qabul kuni:</i><span>Juma</span></div>
